@@ -6,6 +6,8 @@ changes in sbcl-0.9.19 (1.0.0?) relative to sbcl-0.9.18:
     startup, not time since first call to GET-INTERNAL-REAL-TIME.
   * improvement: SAVE-LISP-AND-DIE explicitly checks that multiple
     threads are not running after *SAVE-HOOKS* have run.
+  * improvement: floating-point exception handling should work on all
+    POSIX platforms (thanks to NIIMI Satoshi)
   * bug fix: compiler bug triggered by a (non-standard) VALUES
     declaration in a LET* was fixed. (reported by Kaersten Poeck)
   * bug fix: file compiler no longer confuses validated and already
